k8s/hello-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service
  namespace: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-service
  template:
    metadata:
      labels:
        app: hello-service
    spec:
      containers:
        - name: hello-service
          image: registry.ceszke.com/hello-service:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello
spec:
  ports:
    - port: 8080
  selector:
    app: hello-service
