k8s/hello-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-web
  namespace: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-web
  template:
    metadata:
      labels:
        app: hello-web
    spec:
      containers:
        - name: hello-web
          image: registry.ceszke.com/hello-web
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: hello-web
  namespace: hello
spec:
  #  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  #  externalIPs:
  #    - 1.1.1.1
  selector:
    app: hello-web
